k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2026-07-07T08:14:47Z"
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-techshop-backend
  name: backend
  namespace: techshop
  resourceVersion: "1783412087838479005"
  uid: 7727f363-1b10-40e8-98c5-15311569b49d
spec:
  clusterIP: 34.118.235.240
  clusterIPs:
  - 34.118.235.240
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-techshop-backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
