k8s/frontend-lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloudprovider.harvesterhci.io/ipam: dhcp
    field.cattle.io/publicEndpoints: '[{"addresses":["34.158.47.150"],"port":80,"protocol":"TCP","serviceName":"techshop:frontend-loadbalancer","allNodes":false}]'
    field.cattle.io/targetWorkloadIds: '["techshop/frontend"]'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"cloud.google.com/neg":"{\"ingress\":true}","cloudprovider.harvesterhci.io/ipam":"dhcp","field.cattle.io/publicEndpoints":"[{\"addresses\":[\"34.158.47.150\"],\"port\":80,\"protocol\":\"TCP\",\"serviceName\":\"techshop:frontend-loadbalancer\",\"allNodes\":false}]","field.cattle.io/targetWorkloadIds":"[\"techshop/frontend\"]","management.cattle.io/ui-managed":"true","networking.gke.io/target-pool":"a8a4cc9659cee4a8e93471c8773ea0 [...]
    management.cattle.io/ui-managed: "true"
    networking.gke.io/target-pool: a83accc1ae83041dc89874d0c8274cc1
  creationTimestamp: "2026-07-07T07:54:10Z"
  name: frontend-loadbalancer
  namespace: techshop
  resourceVersion: "1783411443876431001"
  uid: 83accc1a-e830-41dc-8987-4d0c8274cc1a
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 34.118.228.171
  clusterIPs:
  - 34.118.228.171
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    nodePort: 31949
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-techshop-frontend
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 34.158.47.150
      ipMode: VIP
