k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  creationTimestamp: "2026-07-07T04:50:41Z"
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-techshop-frontend
  name: frontend
  namespace: techshop
  resourceVersion: "1783411443869647009"
  uid: 70f43dc0-1b62-448e-b50f-38eeb8bf4471
spec:
  clusterIP: 34.118.237.203
  clusterIPs:
  - 34.118.237.203
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-techshop-frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
