k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    field.cattle.io/publicEndpoints: '[{"addresses":["35.240.222.141"],"port":80,"protocol":"HTTP","serviceName":"techshop:frontend","ingressName":"techshop:techshop-ingress","path":"/","allNodes":false},{"addresses":["35.240.222.141"],"port":443,"protocol":"HTTPS","serviceName":"techshop:frontend","ingressName":"techshop:techshop-ingress","path":"/","allNodes":false}]'
  creationTimestamp: "2026-07-07T04:51:28Z"
  generation: 1
  name: techshop-ingress
  namespace: techshop
  resourceVersion: "1783399941030127012"
  uid: c6f9dad5-90c8-4704-9dec-1eb27fe17bee
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 35.240.222.141
